# mittens

./: CMakeLists.txt  LICENSE  README.md
examples/: 1_win32_hresult_boundary_function_example.cpp  2_custom_app_return_codes_with_messages.cpp  2_mfc_exception_handling.cpp  3_win32_hresult_boundary_function_example.cpp  4_lippincott_blog_post_example.cpp  4_multi_catch.cpp  5_handler_from_function.cpp  CMakeLists.txt  example0.cpp  example1.cpp  example2.cpp  example3.cpp
include/: common_catchers.hpp  common_handlers.hpp  generic_exception_catcher.hpp  generic_exception_handler.hpp  seh_handlers.hpp
test/: all_catcher_test.cpp  bad_alloc_catcher_test.cpp  catcher_composition_test.cpp  generic_exception_catcher_test.cpp  generic_exception_handler_test.cpp  handler_composition_test.cpp  main.cpp  seh_converter_test.cpp  std_exception_catcher_test.cpp  std_exception_handler_test.cpp
tests/: all_catcher_test.cpp  bad_alloc_handler_test.cpp  exception_generators.hpp  generic_exception_handler_call_arity_tests.cpp  generic_exception_handler_test.cpp  std_exception_handler_test.cpp
